# Boids-Midterm

./: BoidsCommon.hpp  BoidsGrid.hpp  BoidsSOA.hpp  BoidsUpdate.hpp  BoidsUpdateSOA.hpp  CMakeLists.txt  SpeedUpCalculation.cpp  SpeedUpCalculation_threads.cpp  boids_parallel.cpp  boids_parallel_SOA.cpp  boids_parallel_grid.cpp  boids_sequential.cpp  boids_sequential_grid.cpp
